Refactor 2 for Publisher